--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@ layout: compress
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="css/modern-blog.css"/>
+    <link rel="stylesheet" href="blog.css">
     <!--[if IE]>
     <script type="text/javascript" src="js/vendors/html5.min.js"></script>
     <![endif]-->
@@ -27,14 +28,25 @@ layout: compress
 <body class="body">
 <div class="container">
     <header class="header">
-        <h1>Modern Blog<span>A Clean, Fresh Minimal Look.</span></h1>
-        <nav class="links">
-            <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+        <nav>
+            <a href="index.html"><img src="Pictures/logoup.png"></a>
+            <div class="nav-links" id="navlinks">
+                <i class="fa fa-times" onclick="hideMenu()"></i>
+                <ul type="none">
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="members.html">MEMBERS</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="resume.html">RESUME</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                </ul>
+            </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
     </header>
+
+
+
+    <!-- vao phan chinh la blog ne -->
     <div class="content">
         <!-- trianglify pattern container -->
         <div class="pattern pattern--hidden"></div>
@@ -74,6 +86,24 @@ layout: compress
         </div>
     </div>
     <!-- /container -->
+
+
+    <!-- xuong duoi footer xem thu coi no co chay duoc ko -->
+
+    <footer>
+        <p>To know more, visit us at our Facebook page</p>
+        <a href="https://www.facebook.com/CultC.Anh1/?ref=pages_you_manage"><i class="fab fa-facebook"
+                style="color: black;"></i></a>
+        <p>This website is dedicated to the 31 beautiful fish of the CA1 class, 2020-2023</p>
+        <p>Special thanks to Nguyễn Hoàng Khánh Minh, Phan Hoàng Thanh Vy, and Nguyễn Đăng Khương</p>
+        <span class="why">
+            <i class="fas fa-heart"></i>
+            <h5>Lots of love from CA1</h5>
+            <i class="fas fa-heart"></i>
+        </span>
+        <p>© 2021, Jimmy Khang Nguyen</p>
+    </footer>
+
 </div>
 <!-- JS -->
 <script src="js/vendors/trianglify.min.js"></script>
