--- a/blog.html
+++ b/blog.html
@@ -10,99 +10,64 @@ layout: compress
     <title>{{ site.title }}</title>
     <meta name="description" content="{{ site.description }}"/>
     <meta name="keywords" content="{{ site.keywords }}"/>
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="css/modern-blog.css"/>
-    <link rel="stylesheet" href="blog.css">
-    <!--[if IE]>
-    <script type="text/javascript" src="js/vendors/html5.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="khung.css">
     <script>
         if (navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
             var root = document.getElementsByTagName('html')[0];
             root.setAttribute('class', 'ff');
         }
     </script>
+    <!-- đã bỏ link header.html--> 
 </head>
+
 <body class="body">
-<div class="container">
-    <header class="header">
-        <nav>
-            <a href="index.html"><img src="Pictures/logoup.png"></a>
-            <div class="nav-links" id="navlinks">
-                <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul type="none">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="members.html">MEMBERS</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="resume.html">RESUME</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                </ul>
-            </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
-        </nav>
-    </header>
 
-
-
-    <!-- vao phan chinh la blog ne -->
-    <div class="content">
-        <!-- trianglify pattern container -->
-        <div class="pattern pattern--hidden"></div>
-        <!-- cards -->
-        <div class="wrapper">
-            {% for post in site.posts %}
-            <div class="card" data-id="{{ post.id }}">
-                <div class="card__container card__container--closed">
-                    <svg class="card__image" xmlns="http://www.w3.org/2000/svg"
-                         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1200"
-                         preserveAspectRatio="xMidYMid slice">
-                        <defs>
-                            <clipPath id="{{ post.id }}-clip-path">
-                                <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
-                            </clipPath>
-                        </defs>
-                        <image clip-path="url(#{{ post.id }}-clip-path)" width="1920" height="1200"
-                               xlink:href="{{ post.image }}"></image>
-                    </svg>
-                    <div class="card__content">
-                        <i class="card__btn-close fa fa-times"></i>
-                        <div class="card__caption">
-                            <h2 class="card__title">{{ post.title }}</h2>
-                            <p class="card__subtitle">{{ post.subtitle }}</p>
-                        </div>
-                        <div class="card__copy">
-                            <div class="meta">
-                                <span class="meta__date">{{ post.date | date: "%Y-%m-%d" }}</span>
+    <div class="container">
+        <!-- vao phan chinh la blog ne -->
+        <div class="content">
+            <!-- trianglify pattern container -->
+            <div class="pattern pattern--hidden"></div>
+            <!-- cards -->
+            <div class="wrapper">
+                {% for post in site.posts %}
+                <div class="card" data-id="{{ post.id }}">
+                    <div class="card__container card__container--closed">
+                        <svg class="card__image" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1200"
+                            preserveAspectRatio="xMidYMid slice">
+                            <defs>
+                                <clipPath id="{{ post.id }}-clip-path">
+                                    <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
+                                </clipPath>
+                            </defs>
+                            <image clip-path="url(#{{ post.id }}-clip-path)" width="1920" height="1200"
+                                xlink:href="{{ post.image }}"></image>
+                        </svg>
+                        <div class="card__content">
+                            <i class="card__btn-close fa fa-times"></i>
+                            <div class="card__caption">
+                                <h2 class="card__title">{{ post.title }}</h2>
+                                <p class="card__subtitle">{{ post.subtitle }}</p>
                             </div>
-                            {{ post.content }}
+                            <div class="card__copy">
+                                <div class="meta">
+                                    <span class="meta__date">{{ post.date | date: "%Y-%m-%d" }}</span>
+                                </div>
+                                {{ post.content }}
+                            </div>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
+                <!-- /cards -->
             </div>
-            {% endfor %}
-            <!-- /cards -->
         </div>
-    </div>
     <!-- /container -->
-
-
-    <!-- xuong duoi footer xem thu coi no co chay duoc ko -->
-
-    <footer>
-        <p>To know more, visit us at our Facebook page</p>
-        <a href="https://www.facebook.com/CultC.Anh1/?ref=pages_you_manage"><i class="fab fa-facebook"
-                style="color: black;"></i></a>
-        <p>This website is dedicated to the 31 beautiful fish of the CA1 class, 2020-2023</p>
-        <p>Special thanks to Nguyễn Hoàng Khánh Minh, Phan Hoàng Thanh Vy, and Nguyễn Đăng Khương</p>
-        <span class="why">
-            <i class="fas fa-heart"></i>
-            <h5>Lots of love from CA1</h5>
-            <i class="fas fa-heart"></i>
-        </span>
-        <p>© 2021, Jimmy Khang Nguyen</p>
-    </footer>
+    
 
 </div>
 <!-- JS -->
