--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@ layout: compress
 </head>
 
 <body class="body">
-
+    {% include header.html %}
     <div class="container">
         <!-- vao phan chinh la blog ne -->
         <div class="content">
@@ -67,7 +67,8 @@ layout: compress
             </div>
         </div>
     <!-- /container -->
-    
+    {% include footer.html %}
+
 
 </div>
 <!-- JS -->
